fix right hand gutter spacing on x-small views for reset all button.

--- a/src/components/panels/ConfigPanel/_config-panel.scss
+++ b/src/components/panels/ConfigPanel/_config-panel.scss
@@ -62,6 +62,10 @@
       padding-left: 0.5rem;
       padding-right: 0.5rem;
       white-space: nowrap;
+
+      @media screen and (max-width: $breakpoint-x-small) {
+        margin-left: inherit;
+      }
     }
 
     .entity-name {
